Fix overlap of 'All Posts' and ToC; add comments to ToC
The 'All Posts' link used to overlap with the table of contents at the end of a post. This occured because the ToC is sticky to the `main` block, so it scrolled up before the `comments` section. The 'All Post' link, however, is fixed, so it does not scroll up.

This commit fixes the issue by moving the comment block to the main block (from the after_main block). This way, the ToC stays visible in the comment section. We also add the comment section to the ToC.

--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -425,3 +425,7 @@ details summary h3, details summary h4, details summary h5, details summary h6 {
 .hidden {
   display: none;
 }
+
+.toc-comments-link {
+  margin-top: .5rem;
+}
